# itacolumite

./: .env.example  .gitignore  README.md  pyproject.toml
scripts/: bootstrap.ps1  omniparser_cli.py
src/itacolumite/: __init__.py  main.py
src/itacolumite/action/: __init__.py  clipboard.py  keyboard.py  mouse.py  shell.py
src/itacolumite/ai/: __init__.py  gemini_client.py  response_models.py
src/itacolumite/ai/prompts/: __init__.py  system.py
src/itacolumite/config/: __init__.py  settings.py
src/itacolumite/core/: agent.py  coordinate_validation.py  executor.py  grounding_capture.py  grounding_providers.py  grounding_report.py  grounding_telemetry.py  memory.py  omniparser_runner.py
src/itacolumite/interface/: __init__.py  cli.py  control_server.py  logger.py
src/itacolumite/perception/: __init__.py  display.py  screen.py  state.py  window.py
src/itacolumite/tasks/: __init__.py  browser.py  copilot.py  dev_workflow.py  terminal.py  vscode.py
tests/: test_agent.py  test_cli.py  test_coordinate_validation.py  test_display.py  test_executor.py  test_gemini_client.py  test_grounding_capture.py  test_grounding_report.py  test_grounding_telemetry.py  test_memory.py  test_mouse.py  test_omniparser_runner.py  test_response_models.py  test_settings.py  test_shell_policy.py
