[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "itacolumite"
version = "0.1.0"
description = "Autonomous computer-use agent on native Windows"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "Itacolumite Team" }]

dependencies = [
    "google-genai>=1.0.0",
    "pywin32>=306",
    "Pillow>=10.0.0",
    "numpy>=1.26.0",
    "rich>=13.0.0",
    "click>=8.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.0.0",
    "tenacity>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
    "mypy>=1.10.0",
]

[project.scripts]
itacolumite = "itacolumite.main:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
